# EconoSense

./: Makefile  README.md  docker-compose.local.yml
backend/: Dockerfile
backend/app/: .env  example.db  fyp.db  pyproject.toml
backend/app/alembic/: README
backend/app/alembic/versions/: 17246f04cfd3_init_migration.py  3d16b005a631_init_migration.py  5497f14d6131_init_migration.py  56502b1cf909_init_migration.py  59f86526ba69_init_migration.py  6c902651d57e_init_migration.py  93145a646e24_init_migration.py  bab55b0925ac_init_migration.py
backend/app/app/: backend_pre_start.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: auth.py  indicator.py
backend/app/app/clients/: dbnomics.py  nber.py
backend/app/app/core/: config.py  etl.py  ml_prediction.py  preprocessing.py
backend/app/app/core/models/: USA_data.csv  scaler.joblib  scaler.pkl
backend/app/app/crud/: __init__.py  crud_indicator.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/models/: indicator.py  user.py
backend/app/app/schemas/: __init__.py  indicator.py  user.py
backend/app/app/templates/: index.html
backend/app/app/tests/: README.md
frontend/: .env.development  .env.production  next.config.js  package.json
frontend/src/: routes.tsx
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx
frontend/src/services/: auth.service.ts  country_list.service.ts  indicator.service.ts
frontend/src/types/: react-advanced-gauge-chart.d.ts
frontend/src/utils/: fakeData.ts  getDateRange.ts  transformRisk.ts  (+1 more)
(+48 files in other folders)
