[tool.poetry]
name = "app"
version = "0.0.1"
description = "FastAPI Server Boilerplate"
authors = ["ReJackTion"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "~0.18.3"
fastapi = "~0.85.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
Jinja2 = "^3.1.2"
SQLAlchemy = "^1.4.41"
tenacity = "^8.1.0"
alembic = "^1.8.1"
httpx = "^0.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.4"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
missingno = "^0.5.2"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pylint = "^2.15.3"
pytest = "^6.2.5"
requests = "^2.26.0"
